make Overwolf App work in `public` directory

--- a/public/main.window.html
+++ b/public/main.window.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="../../overwolf-demo-app/src/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <title>Demo app</title>
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600" rel="stylesheet">
@@ -100,35 +100,35 @@
         <div class="window-controls-group">
           <button class="window-control" onclick="showSupport()">
             <svg class="svg-icon-fill">
-              <use xlink:href="assets/svg/sprite.svg#window-control_support" />
+              <use xlink:href="./assets/svg/sprite.svg#window-control_support" />
             </svg>
           </button>
 
           <button class="window-control">
             <svg class="svg-icon-fill">
-              <use xlink:href="assets/svg/sprite.svg#window-control_settings" />
+              <use xlink:href="./assets/svg/sprite.svg#window-control_settings" />
             </svg>
           </button>
 
           <button class="window-control" onclick="minimize()">
             <svg class="svg-icon-fill">
-              <use xlink:href="assets/svg/sprite.svg#window-control_minimize" />
+              <use xlink:href="./assets/svg/sprite.svg#window-control_minimize" />
             </svg>
           </button>
 
           <button class="window-control" onclick="toggleMaximize()">
             <input type="checkbox" class="maximize-restore-selector toggle-icons" checked />
             <svg class="svg-icon-fill svg-icon-restore">
-              <use xlink:href="assets/svg/sprite.svg#window-control_restore" />
+              <use xlink:href="./assets/svg/sprite.svg#window-control_restore" />
             </svg>
             <svg class="svg-icon-fill svg-icon-maximize">
-              <use xlink:href="assets/svg/sprite.svg#window-control_maximize" />
+              <use xlink:href="./assets/svg/sprite.svg#window-control_maximize" />
             </svg>
           </button>
 
           <button class="window-control window-control-close" onclick="closeWindow();">
             <svg class="svg-icon-fill">
-              <use xlink:href="assets/svg/sprite.svg#window-control_close" />
+              <use xlink:href="./assets/svg/sprite.svg#window-control_close" />
             </svg>
           </button>
         </div>
