--- a/public/sub.window.html
+++ b/public/sub.window.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="../../overwolf-demo-app/src/css/style.css" />
+		<link rel="stylesheet" href="../src/assets/css/style.css" />
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<title>Sub window</title>
 		<script>
